fixed overlap

--- a/src/app/components/Navigation/Navigation.module.css
+++ b/src/app/components/Navigation/Navigation.module.css
@@ -78,6 +78,7 @@
     right: 0;
     display: flex;
     flex-direction: row-reverse;
+    width: fit-content;
 }
 
 .linkContainer:nth-of-type(4) {
