--- a/src/app/components/Navigation/ReleaseDropdown/ReleaseDropdown.module.css
+++ b/src/app/components/Navigation/ReleaseDropdown/ReleaseDropdown.module.css
@@ -1,11 +1,11 @@
 .itemsContainer {
     display: none;
-
     pointer-events: none;
     flex-direction: column;
     gap: 0.5rem;
     padding-top: 0.5rem;
     align-items: flex-end;
+
 }
 
 .isHovered {
@@ -14,15 +14,15 @@
 }
 
 .item {
-    width: fit-content;
+    width: 100%;
 
 }
 
 .item a {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: fit-content;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .item:hover a {
@@ -103,7 +103,8 @@
 
 
     .item {
-        width: fit-content;
+        width: 100%;
+
 
     }
 
@@ -111,8 +112,10 @@
         display: flex;
         flex-direction: row;
         align-items: left;
-        gap: 0.5rem;
+        gap: 3rem;
         font-size: 12px;
+        width: 100%;
+        justify-content: space-between;
 
     }
 
